--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -40,6 +40,9 @@
               </div>
 
             <div class="story-txt">
+                <div class = "iframe-ui">
+                    <img src = "images/sinead/UI-1.svg" alt = "iFrame UI" id="ui-1"> 
+                </div>
                 <iframe
                     mozallowfullscreen="true"
                     src="sinead-story-1.html"
@@ -56,7 +59,7 @@
                 <div class="modal-email" id="email-1">
                     <h2 id="notif">You've got mail!</h2>
                     <p id="modal-email-text">
-                    </p>
+                    </p> <br>
                     <btn id="open-btn" onclick="off()">OPEN</btn>
                 </div>
 
@@ -161,76 +164,76 @@
                     document.getElementById('bg-modal').style.display = "block";
                     document.getElementById('modal-pic').style.display="none";
                     if (x==1) {
-                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Fri, Mar 13, 10:07pm<br>\
-                        Subject: The world is ending??!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Fri, Mar 13, 10:07pm<br>\
+                        <b>Subject:</b> The world is ending??!<br>";
                     }
                     if (x==2) {
-                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Sunday, March 15, 5:36pm<br>\
-                        Subject: February, festival, and french toast<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>Date:</b> Sunday, March 15, 5:36pm<br>\
+                        <b>Subject:</b> February, festival, and french toast<br>";
                     }
                     if (x==3) {
-                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Wed, Apr 1, 7:32pm<br>\
-                        Subject: Lockdown fun!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Wed, Apr 1, 7:32pm<br>\
+                        <b>Subject:</b> Lockdown fun!<br>";
                     }
                     if (x==4) {
-                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Sunday, April 17, 4:36 pm<br>\
-                        Subject: Sheltering, sun, and sugar<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>Date:</b> Sunday, April 17, 4:36 pm<br>\
+                        <b>Subject:</b> Sheltering, sun, and sugar<br>";
                     }
                     if (x==5) {
-                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Mon, May 13, 2:26pm<br>\
-                        Subject: Nightmares and birthdays!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Mon, May 13, 2:26pm<br>\
+                        <b>Subject:</b> Nightmares and birthdays!<br>";
                     }
                     if (x==6) {
-                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Sunday, May 17, 12:23pm<br>\
-                        Subject: Floating, fever dreams, and final classes<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>Date:</b> Sunday, May 17, 12:23pm<br>\
+                        <b>Subject:</b> Floating, fever dreams, and final classes<br>";
                     }
                     if (x==7) {
-                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Mon, Jun 8, 19:32pm<br>\
-                        Subject: Protests and shop openings<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Mon, Jun 8, 19:32pm<br>\
+                        <b>Subject:</b> Protests and shop openings<br>";
                     }
                     if (x==8) {
-                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Monday, June 8, 12:03 pm<br>\
-                        Subject: Rallying, root beer, and what’s right<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>Date:</b> Monday, June 8, 12:03 pm<br>\
+                        <b>Subject:</b> Rallying, root beer, and what’s right<br>";
                     }
                     if (x==9) {
-                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Monday, July 20, 8:46pm<br>\
-                        Subject: Writing camps and travel rumours<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Monday, July 20, 8:46pm<br>\
+                        <b>Subject:</b> Writing camps and travel rumours<br>";
                     }
                     if (x==10) {
-                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Friday, July 23, 7:54pm<br>\
-                        Subject: Home, heat, and hospital calls<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>Date:</b> Friday, July 23, 7:54pm<br>\
+                        <b>Subject:</b> Home, heat, and hospital calls<br>";
                     }
                     if (x==11) {
-                        document.getElementById('modal-email-text').innerHTML="From: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        To: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        Date: Fri, Aug 14, 1:46pm<br>\
-                        Subject: Connemara adventures and secondary school soon!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Fri, Aug 14, 1:46pm<br>\
+                        <b>Subject:</b> Connemara adventures and secondary school soon!<br>";
                     }
                     if (x==12) {
-                        document.getElementById('modal-email-text').innerHTML="From: Louisa Jones (louisianajones@cifmail.com)<br>\
-                        To: Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        Date: Friday, August 14, 7:54pm<br>\
-                        Subject: School, safety, and shared excitement<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
+                        <b>Date:</b> Friday, August 14, 7:54pm<br>\
+                        <b>Subject:</b> School, safety, and shared excitement<br>";
                     }
                 }
             </script>
