Commented out fullscreen feature
too finicky to implement well, for now.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
             }
           </script>
 
-          <div class="fullscreen">
-              <button class="fs-btn" onclick="fullscr()">
+          <!--<div class="fullscreen">
+              <button class="fs-btn" onclick="toggleFullScreen()">
                 <span class="tooltiptext">    Go fullscreen for an immersive experience. </span>
               </button>
                   <script>
@@ -120,8 +120,24 @@
                         elem.webkitRequestFullscreen();
                       }
                     }
+
+                    function toggleFullScreen() {
+                      console.log("fullscreen entered!");
+                      var doc = window.document;
+                      var docEl = doc.documentElement;
+
+                      var requestFullScreen = docEl.requestFullscreen || docEl.mozRequestFullScreen || docEl.webkitRequestFullScreen || docEl.msRequestFullscreen;
+                      var cancelFullScreen = doc.exitFullscreen || doc.mozCancelFullScreen || doc.webkitExitFullscreen || doc.msExitFullscreen;
+
+                      if(!doc.fullscreenElement && !doc.mozFullScreenElement && !doc.webkitFullscreenElement && !doc.msFullscreenElement) {
+                        requestFullScreen.call(docEl);
+                      }
+                      else {
+                        cancelFullScreen.call(doc);
+                      }
+                    }
                   </script>
-            </div>
+            </div>-->
         </div>
     </main>
   
