--- a/countdown.html
+++ b/countdown.html
@@ -57,7 +57,7 @@ if (!pass1)
 history.go(-1);
 if (pass1.toLowerCase() == "gcc2020") {
 alert('Welcome to the soft-launch of Columbia Int Fic: What IF!');
-window.open('index.html');
+window.open('index.html',"_self");
 break;
 }
 testV+=1;
