Added navbar links

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <!--Navigation bar--> 
     <nav class="navigation">
-        <a href="#">about</a>
-        <a href="#" >meet the team</a> 					
-        <a href="#">submit a story</a> 
-        <a href="#.html">contact us</a> 
+        <a href="about.html">about</a>
+        <a href="team.html" >meet the team</a> 					
+        <a href="submit.html">submit a story</a> 
+        <a href="#">contact us</a> 
     </nav>
 
     <main> 
