--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
     
     <body id="home-body">
 
-    <!--Navigation bar--> 
-    <nav class="navigation">
-        <a href="about.html">about</a>
-        <a href="team.html" >meet the team</a> 					
-        <a href="submit.html">submit a story</a> 
-        <a href="#">contact us</a> 
-    </nav>
-
     <main> 
         <div class="container-fluid">
           <!--Code for intro splash screen-->
@@ -137,6 +129,20 @@
                   </script>
             </div>-->
         </div>
+              <!-- Nav Bar-->
+        <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
+          <a class="navbar-brand" href="/index.html"><!-- <img src="images/favicon_io/maroon-logo.png" style="width:40px"> --></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="about.html">about <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="team.html">meet the team</a>
+              <a class="nav-link" href="submit.html">submit a story</a>
+            </div>
+          </div>
+        </nav>
     </main>
   
     <script src="index.js"></script>   
