--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <p>active members</p>
             </div>
             <div class="col-3 text-center digits">
-                <h1>6</h1>
+                <h1>9</h1>
                 <p>unique countries</p>
             </div>
         </div>
@@ -57,7 +57,8 @@
             </div>
         </div>
       </div>
-
+      
+      <!-- Nav Bar-->
       <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
         <a class="navbar-brand" href="/index.html"><img src="images/favicon_io/maroon-logo.png" style="width:40px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
