about page content complete

--- a/about.html
+++ b/about.html
@@ -31,10 +31,16 @@
         </div>
         <!-- Mission Statement -->
         <div class="row justify-content-center">
-            <div class="col-6 text-justify mission">
-                <h4>Mission Statement Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</h4>
+            <div class="col-md-6 col-10 text-justify mission">
+                <h4>
+                  <b><i>Columbia Int Fic</i></b> is a team of 13 Columbia undergraduate students - writers, programmers, and artists - from 9 countries. We first came together in the summer of 2020, in Columbia University’s Global Columbia Collaboratory program. Discussing and ideating projects with an international cohort, we understand how the pandemic, despite being a globally shared experience, has affected different parts of the world in a multitude of different ways. As a result, we have decided to capture and share these global perspectives through interactive fiction.</h4>
             </div>
         </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-10 text-justify mission">
+              <h4>We aim to utilize interactive storytelling techniques to tell stories of life around the globe during the covid-19 pandemic. Through our What IF series, we hope to contribute stories that are representative of our respective global communities’ struggles, and encourage empathy across disparate cultures. We seek to empower our audiences with choice-driven narratives to immerse them in our fact-based stories and leave them with a memorable experience. All our stories are based on meticulous research, drawing from stories of real-life people and events in the pandemic. We hope to use the attention our project potentially receives to support local nonprofits. Ultimately, we hope for our stories to have a profound impact on ourselves as we create them, the people that experience them, and the communities that we depict. </h4>
+          </div>
+      </div>
         <!-- Numbers -->
         <div class="row justify-content-center numbers">
             <div class="col-3 text-center digits">
@@ -48,15 +54,20 @@
         </div>
         <!-- Contact Us-->
         <div class="row justify-content-center">
-          <div class="col-1 text-justify contact">
+          <div class="col-md-1 col-1 text-justify contact">
               <img src="images/mail.svg" class="icon">
+              <img src="images/facebook.svg" class="icon">
+              <img src="images/instagram.svg" class="icon">
           </div>
-          <div class="col-5 text-justify contact">
-              <h4>columbiaintfic@gmail.com</h4>
-              <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h4>
-            </div>
+          <div class="col-md-3 col-8 text-justify contact">
+              <h4><a href="mailto:columbiaintfic@gmail.com">columbiaintfic@gmail.com</a></h4>
+              <h4><a href="https://www.facebook.com/Columbia-Int-Fic-100622075104841">Columbia Int Fic</a></h4>
+              <h4><a href="https://www.instagram.com/columbiaintfic/">Columbia Int Fic</a></h4>
+          </div>
         </div>
       </div>
+
+
       
       <!-- Nav Bar-->
       <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
