team page content complete

--- a/about.html
+++ b/about.html
@@ -32,14 +32,11 @@
         <!-- Mission Statement -->
         <div class="row justify-content-center">
             <div class="col-md-6 col-10 text-justify mission">
-                <h4>
-                  <b><i>Columbia Int Fic</i></b> is a team of 13 Columbia undergraduate students - writers, programmers, and artists - from 9 countries. We first came together in the summer of 2020, in Columbia University’s Global Columbia Collaboratory program. Discussing and ideating projects with an international cohort, we understand how the pandemic, despite being a globally shared experience, has affected different parts of the world in a multitude of different ways. As a result, we have decided to capture and share these global perspectives through interactive fiction.</h4>
+                <h4><b><i>Columbia Int Fic</i></b> is a team of 13 Columbia undergraduate students–writers, programmers, and artists–from 9 countries. We first came together in the summer of 2020, through Columbia University’s Global Columbia Collaboratory program. Discussing and ideating projects with an international cohort, we understand how the pandemic, despite being a globally shared experience, has affected different parts of the world in a multitude of different ways. Thus, we are here to capture and share these global perspectives through interactive fiction.</h4>
+                <h4>We aim to utilize interactive storytelling techniques to share stories of life around the globe during the covid-19 pandemic. Through our <i>what IF</i> series, we hope to develop stories that are representative of our respective communities’ struggles and encourage empathy across disparate cultures. We empower our audiences with choice-driven narratives, immersing them in our fact-based stories and leave them with a memorable experience. All our stories are based on meticulous research, drawing from stories of real-life people and events in the pandemic.</h4> 
+                <h4>Ultimately, we hope for our stories to have a profound impact on ourselves as we create them, the people that experience them, and the communities that we depict. </h4>    
             </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6 col-10 text-justify mission">
-              <h4>We aim to utilize interactive storytelling techniques to tell stories of life around the globe during the covid-19 pandemic. Through our What IF series, we hope to contribute stories that are representative of our respective global communities’ struggles, and encourage empathy across disparate cultures. We seek to empower our audiences with choice-driven narratives to immerse them in our fact-based stories and leave them with a memorable experience. All our stories are based on meticulous research, drawing from stories of real-life people and events in the pandemic. We hope to use the attention our project potentially receives to support local nonprofits. Ultimately, we hope for our stories to have a profound impact on ourselves as we create them, the people that experience them, and the communities that we depict. </h4>
-          </div>
       </div>
         <!-- Numbers -->
         <div class="row justify-content-center numbers">
